--- a/social-media-app/package.json
+++ b/social-media-app/package.json
@@ -11,6 +11,9 @@
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-switch": "^6.0.0",
+    "styled-components": "^5.3.0",
+    "switch": "*",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
