--- a/social-media-app/package.json
+++ b/social-media-app/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-switch": "^6.0.0",
+    "recharts": "^2.0.10",
     "styled-components": "^5.3.0",
     "switch": "*",
     "web-vitals": "^1.1.2"
